--- a/frontend/.env
+++ b/frontend/.env
@@ -1,2 +1,2 @@
-REACT_APP_BACKEND_URL=http://0.0.0.0:8001
+REACT_APP_BACKEND_URL=https://c7fb25b5-8682-4173-aaa5-b56bd9439b0b.preview.emergentagent.com
 WDS_SOCKET_PORT=443
