Initial commit - StudySphere project

--- a/backend/.env
+++ b/backend/.env
@@ -1,2 +1,3 @@
-MONGO_URL="mongodb://localhost:27017"
-DB_NAME="test_database"
+MONGO_URI=mongodb+srv://anchaljainapuresaecomp:IWoz5JKsseRzqVUr@clusterstudyapp.mihkvhp.mongodb.net/?retryWrites=true&w=majority&appName=ClusterStudyapp
+JWT_SECRET=supersecretkey
+PORT=5000
